fixed contrast error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -123,7 +123,7 @@ figcaption {
 }
 
 figcaption a {
-  color: blue;
+  color: black;
   text-decoration: underline;
 }
 
